--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -18,10 +18,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - id: sitepackages
+        run: echo "::set-output path=$(python -c 'import site; print(site.getsitepackages()[0])')"
       - name: Install dependencies
         run: |
           python -m pip install -U pip
           pip install -r requirements.in
+          echo ${{ steps.sitepackages.outputs.path }}
           SITE_PACKAGES_DIR=$(python -c 'import site; print(site.getsitepackages()[0])')
           environments/install_revealjs.sh 4.2.1 "${SITE_PACKAGES_DIR}/sphinx_revealjs/themes/sphinx_revealjs/static/revealjs4"
       - name: Build slide
