[chore] Rebuild when requirements changed

--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -7,6 +7,7 @@ on:
       - source/**
       - samplecode/**
       - .github/workflows/publish-pages.yml
+      - requirements.in
 
 jobs:
   build:
